# libodb

./: CMakeLists.txt
cmake/: ODB.cmake
odb/: callback.hxx  connection.hxx  connection.ixx  database.hxx  database.ixx  exception.hxx  exceptions.cxx  exceptions.hxx  forward.hxx  lazy-pointer-traits.hxx  lazy-ptr-impl.hxx  lazy-ptr-impl.txx  lazy-ptr.hxx  lazy-ptr.ixx  nullable.hxx  pointer-traits.hxx  post.hxx  pre.hxx  schema-version.hxx  session.hxx  version.hxx  wrapper-traits.hxx
odb/details/: c-string.hxx  condition.cxx  condition.hxx  config-vc.h  config.hxx  exception.hxx  export.hxx  lock.hxx  mutex.hxx  thread.hxx  tls.hxx  transfer-ptr.hxx  type-info.hxx
odb/details/meta/: polymorphic-p.hxx
odb/details/posix/: condition.hxx  condition.ixx  exceptions.cxx  exceptions.hxx  thread.ixx
odb/details/shared-ptr/: base.cxx  base.hxx  base.ixx  exception.hxx
odb/details/win32/: condition.cxx  condition.hxx  exceptions.cxx  exceptions.hxx
